# smithy-dafny

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .releaserc.cjs  CHANGELOG.md  Makefile  NOTICE  README.md  Recursive_function.md  SUPPORT_POLICY.rst  SharedMakefile.mk  SharedMakefileV2.mk  SmithyDafnyMakefile.mk  SmithyDafnySedMakefile.mk  project.properties  run-dafny.sh  smithy-templates.json
TestModels/Constraints/runtimes/python/: pyproject.toml
TestModels/Constraints/runtimes/python/src/constraints/: __init__.py
TestModels/Constraints/runtimes/python/src/simple_constraints/: __init__.py
TestModels/Constraints/runtimes/python/test/dafnygenerated/: pyproject.toml
TestModels/Constraints/runtimes/python/test/internaldafny/: pyproject.toml  test_dafny_wrapper.py
TestModels/Constructor/runtimes/python/: pyproject.toml  tox.ini
TestModels/Constructor/runtimes/python/src/simple_constructor/: __init__.py
TestModels/Constructor/runtimes/python/test/dafnygenerated/: pyproject.toml
TestModels/Constructor/runtimes/python/test/internaldafny/: pyproject.toml  test_dafny_wrapper.py
TestModels/Constructor/runtimes/rust/: Cargo.toml  README.md
TestModels/Constructor/runtimes/rust/dafny_impl/: Cargo.toml
TestModels/Constructor/runtimes/rust/dafny_impl/src/: implementation_from_dafny.rs
TestModels/Constructor/runtimes/rust/src/: client.rs  config.rs  conversions.rs  implementation_from_dafny.rs  lib.rs  operation.rs  types.rs  wrapped.rs
TestModels/Constructor/runtimes/rust/src/client/: get_constructor.rs  get_stub.rs
TestModels/Constructor/runtimes/rust/src/conversions/: client.rs  error.rs  get_constructor.rs  get_stub.rs  simple_constructor_config.rs
TestModels/Constructor/runtimes/rust/src/operation/: get_constructor.rs  get_stub.rs
TestModels/Constructor/runtimes/rust/src/types/: error.rs  simple_constructor_config.rs
TestModels/Constructor/runtimes/rust/src/wrapped/: client.rs
TestModels/Constructor/runtimes/rust/tests/: constructor_test.rs  stub_test.rs
TestModels/Constructor/runtimes/rust/tests/tests_from_dafny/: mod.rs
TestModels/Dependencies/runtimes/python/: pyproject.toml
TestModels/Dependencies/runtimes/python/src/simple_dependencies/: __init__.py
TestModels/Dependencies/runtimes/python/test/internal_generated_dafny/: pyproject.toml
TestModels/Dependencies/runtimes/python/test/internaldafny/: pyproject.toml  test_dafny_wrapper.py
TestModels/Documentation/runtimes/rust/: Cargo.toml  README.md
TestModels/Documentation/runtimes/rust/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
TestModels/Documentation/runtimes/rust/doc/aws_smithy_async/: all.html
TestModels/Documentation/runtimes/rust/doc/aws_smithy_runtime/: all.html  index.html
TestModels/Documentation/runtimes/rust/doc/aws_smithy_runtime_api/: all.html
TestModels/Documentation/runtimes/rust/doc/aws_smithy_types/: all.html  enum.Document.html  enum.Number.html  struct.Blob.html
TestModels/Documentation/runtimes/rust/doc/dafny_runtime/: all.html  enum.Sequence.html  fn.allocate.html  fn.allocate_object.html  fn.allocate_object_track.html  fn.box_coerce.html  fn.char_lt.html  fn.dafny_rational_to_int.html  fn.deallocate.html  fn.euclidian_division.html  fn.euclidian_modulo.html  fn.exact_range.html  fn.fn1_coerce.html  fn.integer_range.html  fn.integer_range_down.html  fn.integer_range_down_unbounded.html  fn.integer_range_unbounded.html  fn.nullable_referential_equality.html  fn.rc_coerce.html  fn.string_of.html  fn.string_utf16_of.html  fn.transmute_unchecked.html  fn.upcast.html  (+118 more)
TestModels/Documentation/runtimes/rust/src/: client.rs  conversions.rs  lib.rs  operation.rs  types.rs  wrapped.rs
TestModels/Documentation/runtimes/rust/tests/: documentation_test.rs
TestModels/Errors/runtimes/python/: pyproject.toml
TestModels/Errors/runtimes/rust/: Cargo.toml  README.md
TestModels/Errors/runtimes/rust/dafny_impl/: Cargo.toml
TestModels/Errors/runtimes/rust/src/: client.rs  conversions.rs  error.rs  implementation_from_dafny.rs-e  lib.rs  operation.rs  types.rs  wrapped.rs
TestModels/Errors/runtimes/rust/tests/: simple_errors_test.rs
TestModels/Extendable/runtimes/rust/: Cargo.toml
TestModels/Extendable/runtimes/rust/dafny_impl/: Cargo.toml
TestModels/Extendable/runtimes/rust/src/: client.rs  conversions.rs  error.rs  factory.rs  lib.rs  operation.rs  standard_library_conversions.rs  types.rs
TestModels/Extendable/runtimes/rust/tests/: extendable_resources_test.rs
TestModels/PythonDafnyRuntime/: README.md  pyproject.toml
TestModels/Refinement/runtimes/python/: pyproject.toml  tox.ini
TestModels/Refinement/runtimes/rust/: Cargo.toml  README.md
TestModels/Refinement/runtimes/rust/dafny_impl/: Cargo.toml
TestModels/Refinement/runtimes/rust/src/: client.rs  conversions.rs  implementation_from_dafny.rs  lib.rs  operation.rs  types.rs
TestModels/Refinement/runtimes/rust/tests/: simple_refinement_test.rs
TestModels/Resource/runtimes/python/: pyproject.toml  tox.ini
TestModels/SQSExtended/runtimes/rust/: Cargo.toml
TestModels/SimpleTypes/SimpleBlob/runtimes/python/: pyproject.toml  tox.ini
TestModels/SimpleTypes/SimpleBoolean/runtimes/python/: pyproject.toml  setup.py  tox.ini
TestModels/SimpleTypes/SimpleBoolean/runtimes/python-init/: good_init.py  pyproject.toml
TestModels/SimpleTypes/SimpleBoolean/runtimes/rust/: Cargo.toml  README.md
TestModels/SimpleTypes/SimpleDouble/runtimes/python/: pyproject.toml
TestModels/SimpleTypes/SimpleInteger/runtimes/python/: pyproject.toml
TestModels/SimpleTypes/SimpleLong/runtimes/python/: pyproject.toml
TestModels/SimpleTypes/SimpleString/runtimes/python/: pyproject.toml
TestModels/SimpleTypes/SimpleString/runtimes/rust/: Cargo.toml  README.md
TestModels/Union/runtimes/python/: pyproject.toml
TestModels/aws-sdks/kms-lite/runtimes/rust/: Cargo.toml
TestModels/aws-sdks/s3/runtimes/python/: pyproject.toml  tox.ini
TestModels/dafny-dependencies/StandardLibrary/runtimes/python/: .gitignore  pyproject.toml  requirements.txt  setup.py  tox.ini
(+6249 files in other folders)
