[tool.poetry]
name = "# TODO-Python: Depend on PyPi once Dafny publishes the Dafny runtime there
python-dafny-runtime"
version = "0.1.0"
description = ""
authors = ["AWS <aws-arg-dafny@amazon.com>"]
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
