[package]
name = "constructor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-runtime = {version = "1.6.0", features = ["client"] }
aws-smithy-runtime-api = {version = "1.7.0", features = ["client"] }
aws-smithy-types = "1.2.0"
dafny_runtime = { path = "../../../dafny-dependencies/dafny_runtime_rust"}
dafny_standard_library = { path = "../../../dafny-dependencies/StandardLibrary/runtimes/rust"}

[dev-dependencies.tokio]
version = "1.26.0"
features = ["full"]
