[package]
name = "simple_errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dafny_runtime = { path = "../../../dafny-dependencies/dafny_runtime_rust"}
[dependencies.aws-smithy-runtime]
features = ["client"]
[dependencies.aws-smithy-runtime-api]
features = ["client"]
[dependencies.aws-smithy-types]

[dev-dependencies.tokio]
version = "1.26.0"
features = ["full"]

[lib]
path = "src/implementation_from_dafny.rs"
