[tool.poetry]
name = "simple-refinement"
version = "0.1.0"
description = ""
authors = ["AWS <aws-arg-dafny@amazon.com>"]
packages = [
    { include = "simple_refinement", from = "src" }
]
# Include all Dafny-generated code in package distributions,
# even though it is not included in version control
include = ["**/smithygenerated/*.py", "**/dafnygenerated/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
simple-refinement-internaldafny = { path = "src/simple_refinement/dafnygenerated", develop = false}
# TODO: Depend on PyPi once Smithy-Python publishes their Python package there
smithy-python = { path = "../../../lib/python/smithy-python", develop = false}
standard-library = {path = "../../../dafny-dependencies/StandardLibrary/runtimes/python", develop = false}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
simple-refinement-test-internaldafny = { path = "test/dafnygenerated", develop = false}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
