[project]
name = "simple_resources"
description = "simple_resources test package"
version = "0.1.0"
authors = [
    { name = "AWS Crypto Tools", email = "aws-crypto-tools@amazon.com" }
]

[tool.poetry]
packages = [
    { include = "simple_resources", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
smithy_python = "^0.0.1"