[tool.poetry]
name = "simple-union"
version = "0.1.0"
description = ""
authors = ["AWS <aws-arg-dafny@amazon.com>"]
packages = [
    { include = "simple_union", from = "src" }
]
# Include all of the following .gitignored files in package distributions,
# even though it is not included in version control
include = ["**/smithygenerated/*.py", "**/internal_generated_dafny/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
simple-union-internaldafny = { path = "src/simple_union/internal_generated_dafny", develop = false}
# TODO: Depend on PyPi once Smithy-Python publishes their Python package there
smithy-python = { path = "../../../../submodules/smithy-python/python-packages/smithy-python", develop = false}
standard-library = {path = "../../../dafny-dependencies/StandardLibrary/runtimes/python", develop = false}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
simple-union-test-internaldafny = { path = "test/internal_generated_dafny", develop = false}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
