[project]
name = "simple_integer"
description = "simple_integer test package"
version = "0.1.0"
authors = [
    { name = "AWS Crypto Tools", email = "aws-crypto-tools@amazon.com" }
]

[tool.poetry]
packages = [
    { include = "simple_integer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
smithy_python = "^0.0.1"