[package]
name = "simple_string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dafny_runtime = { path = "../../../../dafny-dependencies/dafny_runtime_rust"}
[dependencies.aws-smithy-runtime]
path = "/Users/salkeldr/Documents/GitHub/smithy-rs/rust-runtime/aws-smithy-runtime"
features = ["client"]
[dependencies.aws-smithy-runtime-api]
path = "/Users/salkeldr/Documents/GitHub/smithy-rs/rust-runtime/aws-smithy-runtime-api"
features = ["client"]
[dependencies.aws-smithy-types]
path = "/Users/salkeldr/Documents/GitHub/smithy-rs/rust-runtime/aws-smithy-types"