[project]
name = "standard-library"
version = "0.1.0"
authors = [
    { name = "AWS", email = "aws-arg-dafny@amazon.com" }
]

[tool.poetry]
name = "standard-library"
version = "0.1.0"
description = ""
authors = ["AWS <aws-arg-dafny@amazon.com>"]
packages = [
    { include = "standard_library", from = "src" },
]
[tool.poetry.dependencies]
standard-library-internaldafny = { path = "./src/standard_library/dafny", develop = false}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
