[package]
name = "simple_string_dafny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dafny_runtime = { path = "../../../../../dafny-dependencies/dafny_runtime_rust"}

[lib]
path = "src/implementation_from_dafny.rs"