[tool.poetry]
name = "simple-boolean-test-internaldafny"
version = "0.1.0"
description = ""
authors = ["AWS <aws-arg-dafny@amazon.com>"]
packages = [
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"